# GanttGen

./: .gitignore  BADGE_SETUP.md  BUILD_FIX_SUMMARY.md  CLAUDE.md  FIX-TAURI-BUILD.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_RELEASE_1.0.0.md  IMPLEMENT_CODE_SIGNING.md  MACOS_CODE_SIGNING_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  RELEASE_NOTES_1.0.0.md  TAURI_BUILD_WORKFLOW_CHANGES.md  gantt_chart.html  gantt_chart_presentation.html  jest.config.js  package-lock.json  package.json  playwright.config.js  playwright.visual.config.js  readability_recommendations.md
.github/: copilot-instructions.md
config/: project.json
docs/: APPLE_CODE_SIGNING.md  CSV_EXCEL_IMPORT_SPEC.md  DMG_BUNDLING_FIX.md  EXCEL_TEMPLATE_GUIDE.md  IMPORT_SCRIPT_OUTLINE.md  TAURI_APP_ISSUE.md  TAURI_PAUSE_BLOCK_ISSUE.md
electron-app/: .gitignore  BUILDING.md  CODE_SIGNING_SETUP.md  GITHUB_ISSUE.md  ISSUES_FIXED.md  MACOS_TROUBLESHOOTING.md  QUICK_FIX.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  package-lock.json  package.json
palette_examples/: PALETTE_EXAMPLES.md  template_alternating.html  template_purples_a.html  template_purples_b.html  template_purples_c.html  template_reds.html  template_reds_b.html
scripts/: ClearGanttGenAttributes.command  build.js  create_mac_zip_bundle.sh  generate-icons.js  generate_template.js  install-mac.sh  json_to_excel.js  manage-version.js  package-lock.json  package-mac-zip.js  package.json  parse-file.js  render.js  start-fresh.sh  tauri-build-local.js  tauri-build.js  update-visual-snapshots.sh
tauri-app/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
