[package]
name = "ganttgen-app"
version = "1.0.0"
description = "GanttGen - Data-driven Gantt Chart Generator"
authors = ["SEI"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "ganttgen_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
