[package]
name = "ganttgen-app"
version = "1.0.0"
description = "GanttGen - Data-driven Gantt Chart Generator"
authors = ["SEI"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "ganttgen_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "fs"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate"] }
tar = "0.4"
flate2 = { version = "1", default-features = true, features = ["zlib"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
